	(hex_document_get_byte): new convenience function.
	(hex_document_export_html): new function.
	* changed behavior of dialogs: create them only once (upon first
	invocation) and subsequently hide/show them.
	* main.c (child_changed_cb): set sensitivity of saving and exporting
	menu items.
	* removed loads of useless artifacts all over the code.

1999-12-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* fixed some compiler warnings.

1999-11-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ghex.h: changed GROUP_MENU_PATH as libgnomeui does translating
	on the fly.
	* main.c (view_changed_cb): comply to the above.
	* gtkhex.c (render_byte, render_ac): properly show a dot if a
	non-printable char is to be rendered.
	(render_ac, render_xc): use GTK_STATE_NORMAL and GTK_SHADOW_IN for
	the non-active view's cursor.

1999-09-05  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* help/sv/*, help/Makefile.am: added Swedish translation of
	the docs.

1999-07-28  Zbigniew Chyla  <chyla@alice.ci.pwr.wroc.pl>

	* main.c : Use g_strdup_printf instead of g_strconcat for
	translatable strings (makes it easier to translate).

1999-06-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* help/C/index.html: describe the Get cursor value button in
	conversion dialog.

1999-06-24  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (gtk_hex_size_allocate, recalc_displays): added
	some sanity checks for widths and heights.
	
1999-06-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c: major rewrite of the gc handling code. added some
	sanity checks.

1999-06-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* preferences.c, config.c, ghex.h: make showing the offset column
	configurable.
	* main.c, hex-document.c: respect offset column configuration when
	adding new views.
	* help/C/index.html: bring up to date.

1999-06-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.[ch]: added option to show offset of each line in
	a column on the left. complete rework of the cursor stuff.