@@ -19,6 +19,7 @@
 	* main.c (child_changed_cb): set sensitivity of saving and exporting
 	menu items.
 	* removed loads of useless artifacts all over the code.
+	* help/C/index.html: updated.
 
 1999-12-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
